fix: add slider hidden overflow

--- a/src/sass/blocks/pets.scss
+++ b/src/sass/blocks/pets.scss
@@ -18,7 +18,7 @@
 
 .pets__slider {
   width: 990px;
-  overflow: auto;
+  overflow: hidden;
 
 }
 
